# aeromessage

./: .gitignore  README.md  build  flake.nix  requirements.txt  setup.py
.github/workflows/: build.yml
legacy/: run
legacy/Contents/: Info.plist
legacy/Contents/Frameworks/: libmpdec.4.0.1.dylib  libsqlite3.3.51.2.dylib  libssl.3.dylib  libzstd.1.5.7.dylib
legacy/Contents/Frameworks/Python.framework/Versions/3.14/_CodeSignature/: CodeResources
legacy/Contents/Frameworks/Python.framework/Versions/3.14/include/python3.14/: pyconfig.h
legacy/Contents/Frameworks/Python.framework/Versions/3.14/lib/python3.14/config-3.14-darwin/: Makefile
legacy/Contents/MacOS/: People  python
legacy/Contents/Resources/: People.icns  main.py
legacy/Contents/Resources/openssl.ca/: cert.pem
legacy/Contents/_CodeSignature/: CodeResources
legacy/docs/: 00-initial.md  01-imessage-guide.md
legacy/src/static/: aqua.css  layout.css
legacy/src/templates/: index.html
oxidized/: Cargo.toml  build.sh  tauri.conf.json
oxidized/frontend/: aqua.css  index.html  layout.css  version.txt
oxidized/src/: contacts.rs  db.rs  lib.rs  main.rs  models.rs  send.rs
oxidized/tests/: integration.rs
src/: app.py
