[package]
name = "aeromessage"
version = "0.1.25"
edition = "2021"
description = "Batch-reply to iMessages"
license = "MIT"

[lib]
name = "aeromessage"
path = "src/lib.rs"

[[bin]]
name = "aeromessage"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "6.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[dev-dependencies]
tempfile = "3.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
